add remaining images

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -94,16 +94,6 @@
 				  <figcaption>../dae/meshedit/maxplanck.dae</figcaption>
 				</td>
 			  </tr>
-			  <!-- <tr>
-				<td style="text-align: center;">
-				  <img src="cornell.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
-				</td>
-				<td style="text-align: center;">
-				  <img src="cornell.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
-				</td>
-			  </tr> -->
 			</table>
 		</div>
 
@@ -123,16 +113,6 @@
 				  <figcaption>Importance Sampling Lights</figcaption>
 				</td>
 			  </tr>
-			  <!-- <tr>
-				<td style="text-align: center;">
-				  <img src="cornell.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
-				</td>
-				<td style="text-align: center;">
-				  <img src="cornell.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
-				</td>
-			  </tr> -->
 			</table>
 		</div>
 		<br>We see that Uniform Hemisphere sampling is able to correctly light the object, however it produces a noisier result. In Importance sampling the image is cleaner, brighter, and will generally be more accurate to the scene as we are able to sample directly from light sources instead of randomly taking samples and guessing where light may be incoming on the object.
@@ -197,11 +177,11 @@
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
 				<td style="text-align: center;">
-					<img src="" width="400px"/>
+					<img src="Images\4a_bunny_onlyDirect.png" width="400px"/>
 					<figcaption>Direct Illumination Only</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="" width="400px"/>
+				  <img src="Images\4a_bunny_onlyIndirect.png" width="400px"/>
 				  <figcaption>Indirect Illumination Only</figcaption>
 				</td>
 			  </tr>
@@ -213,27 +193,27 @@
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
 				<td style="text-align: center;">
-					<img src="Images\4b_accumF\CBbunny_0bounce_noacc.png" width="250px"/>
+					<img src="Images\4b_accumF\CBbunny_0bounce_noacc.png" width="200px"/>
 					<figcaption>max_ray_depth = 0</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="Images\4b_accumF\CBbunny_1bounce_noacc.png" width="250px"/>
+				  <img src="Images\4b_accumF\CBbunny_1bounce_noacc.png" width="200px"/>
 				  <figcaption>1</figcaption>
 				</td>
 				<td style="text-align: center;">
-					<img src="Images\4b_accumF\CBbunny_2bounce_noacc.png" width="250px"/>
+					<img src="Images\4b_accumF\CBbunny_2bounce_noacc.png" width="200px"/>
 					<figcaption>2</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="Images\4b_accumF\CBbunny_3bounce_noacc.png" width="250px"/>
+				  <img src="Images\4b_accumF\CBbunny_3bounce_noacc.png" width="200px"/>
 				  <figcaption>3</figcaption>
 				</td>
 				<td style="text-align: center;">
-					<img src="Images\4b_accumF\CBbunny_4bounce_noacc.png" width="250px"/>
+					<img src="Images\4b_accumF\CBbunny_4bounce_noacc.png" width="200px"/>
 					<figcaption>4</figcaption>
 				</td>
 				<td style="text-align: center;">
-					<img src="Images\4b_accumF\CBbunny_5bounce_noacc.png" width="250px"/>
+					<img src="Images\4b_accumF\CBbunny_5bounce_noacc.png" width="200px"/>
 					<figcaption>5</figcaption>
 				</td>
 			  </tr>
@@ -244,27 +224,27 @@
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
 				<td style="text-align: center;">
-					<img src="Images\4b_accumT\CBbunny_0bounce_acc.png" width="250px"/>
+					<img src="Images\4b_accumT\CBbunny_0bounce_acc.png" width="200px"/>
 					<figcaption>max_ray_depth = 0</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="Images\4b_accumT\CBbunny_1bounce_acc.png" width="250px"/>
+				  <img src="Images\4b_accumT\CBbunny_1bounce_acc.png" width="200px"/>
 				  <figcaption>1</figcaption>
 				</td>
 				<td style="text-align: center;">
-					<img src="Images\4b_accumT\CBbunny_2bounce_acc.png" width="250px"/>
+					<img src="Images\4b_accumT\CBbunny_2bounce_acc.png" width="200px"/>
 					<figcaption>2</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="Images\4b_accumT\CBbunny_3bounce_acc.png" width="250px"/>
+				  <img src="Images\4b_accumT\CBbunny_3bounce_acc.png" width="200px"/>
 				  <figcaption>3</figcaption>
 				</td>
 				<td style="text-align: center;">
-					<img src="Images\4b_accumT\CBbunny_4bounce_acc.png" width="250px"/>
+					<img src="Images\4b_accumT\CBbunny_4bounce_acc.png" width="200px"/>
 					<figcaption>4</figcaption>
 				</td>
 				<td style="text-align: center;">
-					<img src="Images\4b_accumT\CBbunny_5bounce_acc.png" width="250px"/>
+					<img src="Images\4b_accumT\CBbunny_5bounce_acc.png" width="200px"/>
 					<figcaption>5</figcaption>
 				</td>
 			  </tr>
@@ -277,27 +257,27 @@
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
 				<td style="text-align: center;">
-					<img src="" width="250px"/>
+					<img src="Images\4c_rr\bunny_rr_m0.png" width="200px"/>
 					<figcaption>max_ray_depth = 0</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="" width="250px"/>
+				  <img src="Images\4c_rr\bunny_rr_m1.png" width="200px"/>
 				  <figcaption>1</figcaption>
 				</td>
 				<td style="text-align: center;">
-					<img src="" width="250px"/>
+					<img src="Images\4c_rr\bunny_rr_m2.png" width="200px"/>
 					<figcaption>2</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="" width="250px"/>
+				  <img src="Images\4c_rr\bunny_rr_m3.png" width="200px"/>
 				  <figcaption>3</figcaption>
 				</td>
 				<td style="text-align: center;">
-					<img src="" width="250px"/>
+					<img src="Images\4c_rr\bunny_rr_m4.png" width="200px"/>
 					<figcaption>4</figcaption>
 				</td>
 				<td style="text-align: center;">
-					<img src="" width="250px"/>
+					<img src="Images\4c_rr\bunny_rr_m100.png" width="200px"/>
 					<figcaption>100</figcaption>
 				</td>
 			  </tr>
@@ -350,22 +330,18 @@
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
 				<td style="text-align: center;">
-				  <img src="" width="250px"/>
-				  <figcaption>Noise Free SCENE 1</figcaption>
+				  <img src="Images\5_sampleRates\bunny_2048s.png" width="400px"/>
 				</td>
 				<td style="text-align: center;">
-					<img src="" width="250px"/>
-					<figcaption>Sample Rate</figcaption>
+					<img src="Images\5_sampleRates\bunny_2048s_rate.png" width="400px"/>
 				</td>
 			  </tr>
 			  <tr>
 				<td style="text-align: center;">
-					<img src="" width="250px"/>
-					<figcaption>Noise Free SCENE 2</figcaption>
+					<img src="Images\5_sampleRates\spheres_2048s.png" width="400px"/>
 				</td>
 				<td style="text-align: center;">
-					<img src="" width="250px"/>
-					<figcaption>Sample Rate</figcaption>
+					<img src="Images\5_sampleRates\spheres_2048s_rate.png" width="400px"/>
 				</td>
 			  </tr>
 			</table>
