--- a/hw3/index.html
+++ b/hw3/index.html
@@ -172,7 +172,7 @@
 			</table>
 		</div>
 
-		<p>Here we compare the rendered views of bunny.dae using 1024 samples per pixel and:</p>
+		<p>Here we compare the rendered views of bunny.dae using 1024 samples per pixel and direct illumination vs indirect illumination only:</p>
 		<div style="display: flex; flex-direction: column; align-items: center;">
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
