add photo for EC and captions

--- a/hw4/index.html
+++ b/hw4/index.html
@@ -281,9 +281,11 @@
 			  <tr>
 				<td style="text-align: center;">
 				  <img src="Images\5.3_custom_texture.png" width="300px"/>
+				  <figcaption>Custom texture map, side view</figcaption>
 				</td>
 				<td style="text-align: center;">
 				  <img src="Images\5.3_extra.png" width="300px"/>
+				  <figcaption>Custom texture map, top view <i>(for fun)</i></figcaption>
 				</td>
 			  </tr>
 			</table>
@@ -332,7 +334,12 @@
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
 				<td style="text-align: center;">
+				  <img src="Images\5.6_extra_credit1.png" width="300px"/>
+				  <figcaption>Custom shader before dropping cloth</figcaption>
+				</td>
+				<td style="text-align: center;">
 				  <img src="Images\5.6_extra_credit.png" width="300px"/>
+				  <figcaption>Custom shader after cloth is at rest on sphere</figcaption>
 				</td>
 			  </tr>
 			</table>
